--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
-<title>cours de maths</title>
+<!DOCTYPE html>
+<html>
+    <title>SIIIIDDDDDDD</title>
 
-<body> <h1>on va voir ajd la raison de la creation de fonction et pourquoi elles existent</h1> 
+    <body> <h1>sid j'ai beesoin de toi pour faire les pulls</h1>
+        <h2>dit moi si c'esty bg de pouvoir fairee ça ?</h2>
+        <h3>sur ce I love u sid</h3>
+        
 
-    <h2>une fonction afffine est une fonction qui obeit a l'exemple mx+p</h2>
 
-    <h3>faites pour le prochain cours l'exercice 20</h3>
+
+
+    </body>
     
