--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>SIIIIDDDDDDD</title>
 
     <body> <h1>sid j'ai beesoin de toi pour faire les pulls</h1>
-        <h2>dit moi si c'esty bg de pouvoir fairee ça ?</h2>
+        <h2>dit moi si c'est bg de pouvoir faire ça ?</h2>
         <h3>sur ce I love u sid</h3>
         
 
