--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>about zelda </title>
+       <strong> <title>about zelda </title>
 
         <body>
              <p> <FONT face= "comic san ms"  color="##FF0000"  size= "8">
@@ -30,7 +30,7 @@
                      il est ovationné pour sa direction artistique, la démesure de son monde ouvert et de son contenu, la qualité des musiques et l'ingéniosité des énigmes.
                       Le jeu reçoit différentes récompenses en 2016 et 2017, dont le prix du jeu de l'année aux Game Awards 2017.
                        Au 30 juin 2021, il s'est écoulé à 24,89 millions d'exemplaires, dont 23,20 millions sur Nintendo Switch et 1,69 million sur Wii U,
-                     ce qui fait de lui le jeu le plus vendu de la franchise. Une suite est annoncée pendant l'E3 2019.</li>
+                     ce qui fait de lui le jeu le plus vendu de la franchise. Une suite est annoncée pendant l'E3 2019.</li> </strong>
 
 
 
