--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-       <strong> <title>about zelda </title>
+        <title><strong>about zelda </strong> </title>
 
         <body>
              <p> <FONT face= "comic san ms"  color="##FF0000"  size= "8">
@@ -21,16 +21,16 @@
              
                 
 
-                <li>L'un des objectifs majeurs de cet épisode fixé par l'équipe de développement est de repenser les conventions de la série.
+                <li><strong>L'un des objectifs majeurs de cet épisode fixé par l'équipe de développement est de repenser les conventions de la série.
                      Le jeu propose ainsi de nouvelles mécaniques de gameplay, comme l'implémentation d'un moteur physique complet pour la gestion des objets et de l'environnement,
                       des voix off pour les personnages principaux, mais aussi des visuels en haute définition. L'univers de Breath of the Wild n'est pas structuré linéairement et est conçu pour récompenser l'exploration,
-                       l'histoire pouvant ainsi être suivie de manière non linéaire.</li>
+                    l'histoire pouvant ainsi être suivie de manière non linéaire.</strong> </li>
 
-                    <li>Lors de sa sortie, le jeu est encensé par la critique. Malgré quelques faiblesses techniques et des visuels en deçà de ceux des jeux des consoles concurrentes,
+                    <li><strong>Lors de sa sortie, le jeu est encensé par la critique. Malgré quelques faiblesses techniques et des visuels en deçà de ceux des jeux des consoles concurrentes,
                      il est ovationné pour sa direction artistique, la démesure de son monde ouvert et de son contenu, la qualité des musiques et l'ingéniosité des énigmes.
                       Le jeu reçoit différentes récompenses en 2016 et 2017, dont le prix du jeu de l'année aux Game Awards 2017.
                        Au 30 juin 2021, il s'est écoulé à 24,89 millions d'exemplaires, dont 23,20 millions sur Nintendo Switch et 1,69 million sur Wii U,
-                     ce qui fait de lui le jeu le plus vendu de la franchise. Une suite est annoncée pendant l'E3 2019.</li> </strong>
+                     ce qui fait de lui le jeu le plus vendu de la franchise. Une suite est annoncée pendant l'E3 2019.</strong></li> 
 
 
 
