--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@ Le succès du site, volontairement dépouillé, est immédiat car les résultats
        <h2>Cette présentation sur les origines du web est maintenant terminé.</h2>
               <p> Nous vous remercions pour votre attention</p>
               <img src="https://i.gifer.com/2Lij.gif" alt="">
-  <h2> by LE FORTIER Nathan, MATON Gabriel, Forest François</h2>
+  <h2> by LE FORTIER Nathan, MATON Gabriel, Forest François : 211</h2>
 
               </div>
        </div>                
